# nanowire_flask

./: .gitignore  .travis.yml  Dockerfile  README.md  README.md.save  README.txt  example.json  example.xlsx  push_instructions.txt  run_unit_tests_docker.sh  setup.cfg  setup.py  setup.py.save  tests.Dockerfile
README/: home.html  image.html  style.css
examples/: example.csv  example.xlsx
nanowire_flask/: __init__.py
nanowire_flask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nanowire_flask/csv_tools/: __init__.py
nanowire_flask/file_tools/: __init__.py
nanowire_flask/image_tools/: __init__.py
nanowire_flask/json_tools/: __init__.py
nanowire_flask/text_tools/: __init__.py
tests/: Dockerfile  csv_server.py  csv_tests.py  example.json  example.xlsx  file_server.py  image_server.py  image_tests.py  json_server.py  json_tests.py  manual_testing.py  requirements.txt  requirements.txt.save  run_unit_tests.sh  test_qr_tools.py  test_text1.txt  test_text3.txt  text_server.py  text_tests.py  unit_tests.py  unit_tests_old.py
tests/brokenDownTests/: json_tests.py  text_tests.py
tests/files/: test_text1.txt  test_text2.txt  test_text3.txt
tests/utils/: file.py  generate_examples.py  server.py
