#
[metadata]
name = nanowire_flask
version = file: VERSION
description = Tool for creating nanowire tools with the flask structure
author = Stuart Bowe
author_email = info@spotlightdata.co.uk
url = https://github.com/SpotlightData/nanowire_flask
keywords = 
  flask
  API
  nanowire
  spotlight data

[options]
python_requires = >= 3.5
packages = find:
scripts = 
#  __init__.py

[build-system]
requires = ["setuptools", "requests", "Pillow"]
